--- a/ProyectoHacerBienEstructura/index-responsive.html
+++ b/ProyectoHacerBienEstructura/index-responsive.html
@@ -1,69 +1,172 @@
-
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prueba de Grid Responsive</title>
-    <link rel="stylesheet" href="estilo/framework-responsive.css">
-    <link rel="stylesheet" href="estilo/custom.css">
-</head>
-<body>
+    <link rel="stylesheet" href="estilo/framework-responsive.css" />
+    <link rel="stylesheet" href="estilo/custom.css" />
+  </head>
+  <body>
     <div class="wrapper">
-        <div class="row">
-            <div class="col-1">1</div>
-            <div class="col-1">2</div>
-            <div class="col-1">3</div>
-            <div class="col-1">4</div>
-            <div class="col-1">5</div>
-            <div class="col-1">6</div>
-            <div class="col-1">7</div>
-            <div class="col-1">8</div>
-            <div class="col-1">9</div>
-            <div class="col-1">10</div>
-            <div class="col-1">11</div>
-            <div class="col-1">12</div>
+      <div class="row">
+        <div class="col-1">1</div>
+        <div class="col-1">2</div>
+        <div class="col-1">3</div>
+        <div class="col-1">4</div>
+        <div class="col-1">5</div>
+        <div class="col-1">6</div>
+        <div class="col-1">7</div>
+        <div class="col-1">8</div>
+        <div class="col-1">9</div>
+        <div class="col-1">10</div>
+        <div class="col-1">11</div>
+        <div class="col-1">12</div>
+      </div>
+      <div class="row">
+        <div class="col-12 cabecera">
+          <div class="row">
+            <div class="nover ver-md col-4">
+              <h1>La estrella de belen</h1>
+            </div>
+            <div class="col-12 col-sm-6 col-md-4">
+              <img class="logo" src="img/dibujo.svg" alt="Imagen" />
+            </div>
+            <div class="nover ver-sm col-6 col-md-4">
+              <h2>Ilumina tu vida con david</h2>
+            </div>
+          </div>
         </div>
-        <div class="row">
+      </div>
+      <div class="row">
+        <div class="col-12 menu">
+          <!-- cada col tiene que llevar un row -->
+          <div class="row">
+            <div class="col-12 col-sm-6 col-md-2 elemento">
+              <p>Elemento1</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-2 elemento">
+              <p>Elemento2</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-2 elemento">
+              <p>Elemento3</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-2 elemento">
+              <p>Elementoo4</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-2 elemento">
+              <p>Elemento5</p>
+            </div>
+            <div class="col-12 col-sm-6 col-md-2 elemento">
+              <p>Elemento6</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-12 col-md-6">
+          <img class="foto" src="img/spoonbill-9181508_1280.webp" alt="s" />
+        </div>
+        <div class="col-12 col-md-6">
+          <h2>Informacion de la empresa</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+            hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
+            dolor
+          </p>
+        </div>
+
+      </div>
+      <div class="row">
+        <div class="col-12 fondo1">
+          <div class="row">
             <div class="col-12">
-                <h1>Título de la página</h1>
+                <h2 class="section">Products</h2>
+          </div>
+            <div class="col-12 col-sm-6 col-md-4">
+              <img class="fotoproducto" src="img/spoonbill-9181508_1280.webp" alt="">
+              <p class="descripcion"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
+                dolor</p>
+              </div>
             </div>
+                  <div class="col-12 col-sm-6 col-md-4">
+                    <img class="fotoproducto" src="img/spoonbill-9181508_1280.webp" alt="">
+                    <p class="descripcion"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                      hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
+                      dolor</p> 
+                </div>
+                  <div class="col-12 col-sm-6 col-md-4">
+                    <img class="fotoproducto" src="img/spoonbill-9181508_1280.webp" alt="">
+                    <p class="descripcion"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                      hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
+                      dolor</p>
+                </div>
+                  <div class="col-12 col-sm-6 col-md-4">
+                    <img class="fotoproducto" src="img/spoonbill-9181508_1280.webp" alt="">
+                    <p class="descripcion"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                      hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
+                      dolor</p>
+                </div>
+                  <div class="col-12 col-sm-6 col-md-4">
+                    <img class="fotoproducto" src="img/spoonbill-9181508_1280.webp" alt="">
+                    <p class="descripcion"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                      hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
+                      dolor</p>
+                </div>
+                  <div class="col-12 col-sm-6 col-md-4">
+                    <img class="fotoproducto" src="img/spoonbill-9181508_1280.webp" alt="">
+                    <p class="descripcion"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                      hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
+                      dolor</p>
+                </div>
+                  <div class="col-12 col-sm-6 col-md-4">
+                    <img class="fotoproducto" src="img/spoonbill-9181508_1280.webp" alt="">
+                    <p class="descripcion"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                      hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
+                      dolor</p>
+                </div>
+                  <div class="col-12 col-sm-6 col-md-4">
+                    <img class="fotoproducto" src="img/spoonbill-9181508_1280.webp" alt="">
+                    <p class="descripcion"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                      hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
+                      dolor</p>
+                </div>
+                  <div class="col-12 col-sm-6 col-md-4">
+                    <img class="fotoproducto" src="img/spoonbill-9181508_1280.webp" alt="">
+                    <p class="descripcion"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
+                      hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
+                      dolor</p>
+                  
+                </div>
+              
+                <div class="row">
+                  <div class="col-12 footer">
+                    <div class="row">
+                      <div class="col-12 nover ver-sm col-sm6">
+
+
+                        <p class="contacto">C/ de la luz</p>
+                        <p class="contacto">Poligono industrial lo bolarin </p>
+                        <p class="contacto">Cartagena Murcia</p>
+
+                      </div>
+                      <div class="col-12 col-sm-6">
+
+                        <img class="mapa" src="/imagenesComprimir/istockphoto-1464847684-612x612.jpg" alt="">
+                      </div>
+                      <div class="col-12 nover-sm ver-md col-md-6">
+
+                        <p class="contacto">C/ de la luz</p>
+                        <p class="contacto">Poligono industrial lo bolarin </p>
+                        <p class="contacto">Cartagena Murcia</p>
+
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
         </div>
-        <div class="row">
-            <div class="col-12">
-                <ul>
-                    <li><a class="active" href="#home">Home</a></li>
-                    <li><a href="#news">News</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a href="#about">About</a></li>
-                  </ul>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-12 col-sm-6 col-md-12">
-                <img class="foto" src="img/spoonbill-9181508_1280.webp" alt="Imagen de un canal">
-            </div>
-            <div class="col-12 col-sm-6 col-md-12">
-                <h2 class="subtitulo">Los canales maritimos</h2>
-                <p class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum dolor lacus, feugiat blandit arcu viverra a. Praesent tortor erat, iaculis eu lacus eget, mattis blandit nisl. Etiam a felis vel leo lobortis pulvinar vel viverra turpis. Sed eu tempor dui, et feugiat sem. Donec tristique sapien et dui fringilla, sit amet sagittis eros vestibulum. Integer facilisis vulputate felis id venenatis. Praesent eget porttitor neque. Mauris sed lectus porta, eleifend ex blandit, suscipit dui. Sed volutpat ex eu est sodales suscipit. Morbi vestibulum mauris nec purus fermentum pulvinar eget a urna. Donec vitae leo nec sapien luctus porttitor id consequat quam.
-                </p>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-6">
-                <h2 class="subtitulo">Los canales maritimos</h2>
-                <p class="subtitulo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum dolor lacus, feugiat blandit arcu viverra a. Praesent tortor erat, iaculis eu lacus eget, mattis blandit nisl. Etiam a felis vel leo lobortis pulvinar vel viverra turpis. Sed eu tempor dui, et feugiat sem. Donec tristique sapien et dui fringilla, sit amet sagittis eros vestibulum. Integer facilisis vulputate felis id venenatis. Praesent eget porttitor neque. Mauris sed lectus porta, eleifend ex blandit, suscipit dui. Sed volutpat ex eu est sodales suscipit. Morbi vestibulum mauris nec purus fermentum pulvinar eget a urna. Donec vitae leo nec sapien luctus porttitor id consequat quam.
-                </p>
-            </div>
-            <div class="col-6">
-                <img class="foto" src="img/spoonbill-9181508_1280.webp" alt="Imagen de un canal">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-8 ml-2">
-                <img class="foto" src="img/spoonbill-9181508_1280.webp" alt="Imagen de un canal">
-            </div>
-        </div>
-    </div>
-</body>
+  </body>
 </html>
