--- a/ProyectoHacerBienEstructura/index-responsive.html
+++ b/ProyectoHacerBienEstructura/index-responsive.html
@@ -26,14 +26,14 @@
       <div class="row">
         <div class="col-12 cabecera">
           <div class="row">
-            <div class="nover ver-md col-4">
-              <h1>La estrella de belen</h1>
+            <div class="nover ver-md col-4 ">
+              <h1 class="eslogan">Ilumina tu vida con David</h1>
             </div>
             <div class="col-12 col-sm-6 col-md-4">
-              <img class="logo" src="img/dibujo.svg" alt="Imagen" />
+              <img class="logo" src="img/logo.svg" alt="Logo de la empresa, Estrella de navidad" />
             </div>
             <div class="nover ver-sm col-6 col-md-4">
-              <h2>Ilumina tu vida con david</h2>
+              <h2 class="nombreLogo">La estrella de Belén</h2>
             </div>
           </div>
         </div>
@@ -43,22 +43,22 @@
           <!-- cada col tiene que llevar un row -->
           <div class="row">
             <div class="col-12 col-sm-6 col-md-2 elemento">
-              <p>Elemento1</p>
+              <p>Elemento 1</p>
             </div>
             <div class="col-12 col-sm-6 col-md-2 elemento">
-              <p>Elemento2</p>
+              <p>Elemento 2</p>
             </div>
             <div class="col-12 col-sm-6 col-md-2 elemento">
-              <p>Elemento3</p>
+              <p>Elemento 3</p>
             </div>
             <div class="col-12 col-sm-6 col-md-2 elemento">
-              <p>Elementoo4</p>
+              <p>Elemento 4</p>
             </div>
             <div class="col-12 col-sm-6 col-md-2 elemento">
-              <p>Elemento5</p>
+              <p>Elemento 5</p>
             </div>
             <div class="col-12 col-sm-6 col-md-2 elemento">
-              <p>Elemento6</p>
+              <p>Elemento 6</p>
             </div>
           </div>
         </div>
@@ -66,14 +66,16 @@
 
       <div class="row">
         <div class="col-12 col-md-6">
-          <img class="foto" src="img/spoonbill-9181508_1280.webp" alt="s" />
+          <img class="foto" src="img/ImagenInfo.webp" alt="Foto de una estrella de navidad" />
         </div>
         <div class="col-12 col-md-6">
-          <h2>Informacion de la empresa</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
-            hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
-            dolor
+          <h2 class="tituloInfo">Informacion de la empresa</h2>
+          <p class="textos">
+            En <strong>La estrella de Belén</strong>, nos especializamos en llevar la magia de la Navidad a todos los rincones de tu hogar, 
+            inspirados en el símbolo más luminoso de esta época: la Estrella de Belén.<br>
+            Creemos que la Navidad es mucho más que una festividad, es un momento para compartir, reflexionar y rodearnos de luz y esperanza.
+            Nuestra misión es ayudarte a crear un ambiente único, mágico y lleno de significado, 
+            conectando la tradición navideña con un toque de elegancia y brillo.
           </p>
         </div>
 
@@ -85,14 +87,14 @@
                 <h2 class="section">Products</h2>
           </div>
             <div class="col-12 col-sm-6 col-md-4">
-              <img class="fotoproducto" src="img/spoonbill-9181508_1280.webp" alt="">
+              <img class="fotoproducto" src="img/imagenIluminacion.jpg" alt="">
               <p class="descripcion"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
                 hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
                 dolor</p>
               </div>
             </div>
                   <div class="col-12 col-sm-6 col-md-4">
-                    <img class="fotoproducto" src="img/spoonbill-9181508_1280.webp" alt="">
+                    <img class="fotoproducto" src="img/decoracion.jpg" alt="">
                     <p class="descripcion"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi
                       hendrerit neque lorem, a commodo lorem pellentesque id. Fusce dictum
                       dolor</p> 
@@ -144,7 +146,7 @@
                 <div class="row">
                   <div class="col-12 footer">
                     <div class="row">
-                      <div class="col-12 nover ver-sm col-sm6">
+                      <div class="  nover ver-sm col-sm6">
 
 
                         <p class="contacto">C/ de la luz</p>
@@ -153,10 +155,9 @@
 
                       </div>
                       <div class="col-12 col-sm-6">
-
-                        <img class="mapa" src="/imagenesComprimir/istockphoto-1464847684-612x612.jpg" alt="">
+                        <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3161.753050766341!2d-0.9867739881433569!3d37.584432371917345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd6343d656c8acd1%3A0x5ca9e1197660b5ca!2sFaro%20de%20Navidad!5e0!3m2!1ses!2ses!4v1734079073696!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                       </div>
-                      <div class="col-12 nover-sm ver-md col-md-6">
+                      <div class=" col-12 nover-sm ver-md col-md-6">
 
                         <p class="contacto">C/ de la luz</p>
                         <p class="contacto">Poligono industrial lo bolarin </p>
