--- a/boostrap/ejercicio3/index.html
+++ b/boostrap/ejercicio3/index.html
@@ -13,15 +13,15 @@
     <div class="container">
         <div class="row">
 
-            <div class="col-12 verde"><p> Header </p></div>
+            <div class="col-12 header"><h1> Header </h1></div>
 
         </div>
 
         <div class="row">
 
-            <div class="col-12 col-sm-6 col-md-4 rojo"><h1>1</h1></div>
-            <div class="col-12 col-sm-6 col-md-4 rojo"><h1>2</h1></div>
-            <div class="col-12 col-sm-12 col-md-4 rojo"><h1>3</h1></div>
+            <div class="col-12 col-sm-6 col-md-4 rojo uno"><p>1</p></div>
+            <div class="col-12 col-sm-6 col-md-4 rojo dos"><p>2</p></div>
+            <div class="col-12 col-md-4 rojo tres"><p>3</p></div>
 
         </div>
         <div class="row">
