--- a/boostrap/ejercicio3/index.html
+++ b/boostrap/ejercicio3/index.html
@@ -16,7 +16,33 @@
             <div class="col-12 header"><h1> Header </h1></div>
 
         </div>
-
+        <div class="row ">
+          <div id="demo" class="carrusel slide col-12 sin " data-bs-ride="carrusel"> 
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="assets/chica2.webp" alt="Los Angeles" class="d-block" style="width:100%">
+                  <div class="carousel-caption">
+                    <h3>Los Angeles</h3>
+                    <p>We had such a great time in LA!</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/mirada-ojos-encuadre-primer-plano-sexy.jpg" alt="Chicago" class="d-block" style="width:100%">
+                  <div class="carousel-caption">
+                    <h3>Chicago</h3>
+                    <p>Thank you, Chicago!</p>
+                  </div> 
+                </div>
+                <div class="carousel-item">
+                  <img src="assets/chica jpg" alt="New York" class="d-block" style="width:100%">
+                  <div class="carousel-caption">
+                    <h3>New York</h3>
+                    <p>We love the Big Apple!</p>
+                  </div>  
+                </div>
+              </div>
+         </div>
+        </div>
         <div class="row">
 
             <div class="col-12 col-sm-6 col-md-4 rojo uno"><p>1</p></div>
