--- a/boostrap/ejercicio4/index.html
+++ b/boostrap/ejercicio4/index.html
@@ -8,7 +8,6 @@
     <title>Dolche vita</title>
 </head>
 <body>
-
     <div class="container">
         <div class="row">
             <nav class="col-12 navbar navbar-expand-md ">
@@ -38,24 +37,24 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active ">
-                    <img src="/ejercicio3/assets/chica2.webp" class="d-block w-100" alt="...">
+                    <img src="assets/platos.jpg" class="d-block w-100" alt="Imagen de platos de comida">
                     <div class="carousel-caption d-none d-sm-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5>Platos</h5>
+                        <p class="textoCarrusel">Some representative placeholder content for the second slide.</p>
                       </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="/ejercicio3/assets/mirada-ojos-encuadre-primer-plano-sexy.jpg" class="d-block w-100" alt="...">
+                    <img src="assets/productos.jpg" class="d-block w-100" alt="imagen de productos">
                     <div class="carousel-caption d-none d-sm-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5>Productos</h5>
+                        <p class="textoCarrusel">Some representative placeholder content for the second slide.</p>
                       </div>  
                 </div>
                   <div class="carousel-item">
-                    <img src="/ejercicio3/assets/chica2.webp" class="d-block w-100" alt="...">
+                    <img src="assets/restaurante.jpg" class="d-block w-100" alt="imagen de un restaurante">
                     <div class="carousel-caption d-none d-sm-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5>Restaurante</h5>
+                        <p class="textoCarrusel">Some representative placeholder content for the second slide.</p>
                       </div> 
                 </div>
                 </div>
@@ -70,60 +69,66 @@
               </div>
         </div>
         <div class="row">
-            <div class="col-12  col-sm-6 order-sm-0 order-md-2">
+            <div class="col-12  col-sm-6 order-sm-0 order-md-2 fondo2">
                 <h2>Platos</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, atque ut temporibus illum nesciunt facilis. Repellat voluptatem error nulla sunt pariatur consectetur incidunt dolor cumque perspiciatis adipisci. Est, ex iure.</p>
             </div>
-            <div class="col-12  col-sm-6 order-sm-1 order-md-3 sin">
-                <img class="w-100" src="/ejercicio3/assets/chica2.webp" alt="chica">
+            <div class="col-12  col-sm-6 order-sm-1 order-md-3 sin fondo2">
+                <img class="w-100" src="assets/platos.jpg" alt="Platos">
             </div>
-            <div class="col-12  col-sm-6 order-sm-3 order-md-0">
+            <div class="col-12  col-sm-6 order-sm-3 order-md-0 fondo2">
 
                 <h2>Productos</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, atque ut temporibus illum nesciunt facilis. Repellat voluptatem error nulla sunt pariatur consectetur incidunt dolor cumque perspiciatis adipisci. Est, ex iure.</p>
 
             </div>
-            <div class="col-12  col-sm-6 order-sm-2 order-md-1 sin">
-                <img class="w-100" src="/ejercicio3/assets/chica2.webp" alt="chica">
+            <div class="col-12  col-sm-6 order-sm-2 order-md-1 sin fondo2">
+                <img class="w-100" src="assets/productos.jpg" alt="Productos">
             </div>
-            <div class="col-12  col-sm-6 order-sm-4 order-md-4">
+            <div class="col-12  col-sm-6 order-sm-4 order-md-4 fondo2">
                 <h2>Restaurante</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, atque ut temporibus illum nesciunt facilis. Repellat voluptatem error nulla sunt pariatur consectetur incidunt dolor cumque perspiciatis adipisci. Est, ex iure.</p>
             </div>
-            <div class="col-12  col-sm-6 order-sm-5 order-md-5 sin">
-                <img class="w-100" src="/ejercicio3/assets/chica2.webp" alt="chica">
+            <div class="col-12  col-sm-6 order-sm-5 order-md-5 sin fondo2">
+                <img class="w-100" src="assets/restaurante.jpg" alt="Restaurante">
             </div>
         </div>
-        <div class="row">
-            <div class="col-12">
+        <div class="row ">
+            <div class="col-12 fondo1">
                 <h2>Nuestro equipo</h2>
                 <div class="row">
                     <div class="col-12  col-sm-6 col-md-4 order-md-0">
-                        <img class="w-100 rounded-circle personal" src="/ejercicio3/assets/chica2.webp" alt="chica">
+                        <img class=" rounded-circle personal" src="assets/cocinero1.webp" alt="cocinero1">
                     </div>
-                    <div class="col-12  col-sm-6 col-md-4 order-md-3">Texto de equipo1</div>
+                    <div class="col-12  col-sm-6 col-md-4 order-md-3 d-flex algain-irems-center">
+                      <p class="textoEquipo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum reprehenderit laborum temporibus labore non consequuntur optio recusandae facilis laboriosam amet.</p>
+                    </div>
                     <div class="col-12  col-sm-6 col-md-4 order-md-1">
-                      <img class="w-100 rounded-circle personal" src="/ejercicio3/assets/chica2.webp" alt="chica">
-
+                        <img class=" rounded-circle personal" src="assets/cocinero2.webp" alt="cocinero2">
                     </div>
-                    <div class="col-12  col-sm-6 col-md-4 order-md-4">texto de equipo 2</div>
-                    <div class="col-12  col-sm-6 col-md-4 order-md-2">
-                      <img class="w-100 rounded-circle personal" src="/ejercicio3/assets/chica2.webp" alt="chica">
+                    <div class="col-12  col-sm-6 col-md-4 order-md-4 d-flex algain-irems-center">
+                       <p class="textoEquipo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum reprehenderit laborum temporibus labore non consequuntur optio recusandae facilis laboriosam amet. </p>
                     </div>
-                    <div class="col-12  col-sm-6 col-md-4 order-md-5">Texto de equipo 3</div>
-
+                    <div class="col-12  col-sm-6 col-md-4 order-md-2 ">
+                      <img class=" rounded-circle personal" src="assets/cocinero3.webp" alt="cocinero3">
+                    </div>
+                    <div class="col-12  col-sm-6 col-md-4 order-md-5 d-flex algain-irems-center">
+                      <p class="textoEquipo">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum reprehenderit laborum temporibus labore non consequuntur optio recusandae facilis laboriosam amet. </p>
+                    </div>
                 </div>
             </div>
         </div>
-
         <div class="row">
-            <div class="col-12 col-sm-6">Mapa</div>
-            <div class="col-12 col-sm-6">Contacto</div>
+            <div class="col-12 col-sm-6 d-flex algain-irems-center fondopie sin">
+              <img class="w-100" src="assets/Mapa.jpg" alt="Mapa">
+            </div>
+            
+            <div class="col-12 col-sm-6 fondopie">
+              <h3>Contacto</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, atque ut temporibus illum nesciunt facilis. Repellat voluptatem error nulla sunt pariatur consectetur incidunt dolor cumque perspiciatis adipisci. Est, ex iure.</p>
+            </div>
         </div>
     </div>
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
